[tool.poetry]
name = "reinforcestrategycreator"
version = "0.1.0"
description = ""
authors = ["Alessio Rocchi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.57"
requests = "^2.32.3"
pandas = "^2.2.3"
pandas-ta = "^0.3.14b0"
ta = "^0.11.0"
numpy = "^1.26.0"
gymnasium = "0.29.1"
tensorflow = "^2.16.1" # Or appropriate version

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
