[tool.poetry]
name = "reinforcestrategycreator"
version = "0.1.0"
description = ""
authors = ["Alessio Rocchi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.58"
requests = "^2.32.3"
pandas = "^2.2.3"
pandas-ta = "^0.3.14b0"
ta = "^0.11.0"
numpy = "^1.26.0"
gymnasium = "0.29.1"
tensorflow = "^2.16.1" # Or appropriate version
matplotlib = "^3.8.4" # Added for plotting results
streamlit = "^1.34.0" # Added for dashboard
sqlalchemy = "^2.0.30" # Added for PostgreSQL interaction
psycopg2-binary = "^2.9.9" # Added for PostgreSQL driver
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
scikit-learn = "^1.6.1"
plotly = "^6.0.1"
python-dotenv = "^1.0.1" # Added for loading .env file
# tensorflow-metal = "^1.2.0"  # Temporarily commented out for Linux compatibility (Run 3)

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.4" # Added for linting and formatting
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
